--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="app" class="app">
     <div id="card" class="card">
       <img id="catImage" class="cat-image" src="images/sad1.png" alt="Sad cat" />
-      <h1 class="title">Will you forgive me?</h1>
+      <h1 class="title">Khóc ròng 2 đêm vì mất chuỗi r, chừa r, nhớ r, tha lỗi cho t đi c :(( </h1>
       <p id="noMessage" class="subtitle"></p>
       <div class="actions">
         <button id="yesBtn" class="btn btn-yes">Yes</button>
